# nemesis_core

./: .gitignore  README.md
nemesis_description/: CMakeLists.txt  package.xml
nemesis_description/launch/: description.launch  record.launch  rs_rtabmap.launch  rs_t265_and_d435i.launch
nemesis_description/urdf/: nemesis.urdf.xacro  wheel.urdf.xacro
nemesis_gazebo/: CMakeLists.txt  package.xml
nemesis_gazebo/launch/: nemesis_empty_world.launch  nemesis_playpen.launch  playpen.launch  spawn_nemesis.launch
nemesis_navigation/: CMakeLists.txt  package.xml
nemesis_navigation/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml
nemesis_navigation/launch/: core.launch  move_base.launch  nav.launch  nav0.launch  nav2.launch  perception.launch  record.launch  record_with_imu.launch  rs_rtabmap.launch  rs_t265.launch  rtabmap.launch  test_loopcosure.launch  view_mapping.launch  view_nav.launch
nemesis_navigation/rviz/: nemesis_navigation.rviz
nemesis_viz/: CMakeLists.txt  package.xml
nemesis_viz/launch/: view_mapping.launch  view_model.launch  view_model_and_sensors.launch
nemesis_viz/rviz/: model.rviz  model_and_sensors.rviz
