<?xml version="1.0"?>
<package>

  <name>nemesis_navigation</name>
  <version>0.1.0</version>
  <description>Autonomous mapping and navigation scearios for Nemesis</description>

  <author email="antoan.bekele@gmail.com">Antoan Bekele</author>
  <maintainer email="antoan.bekele@gmail.com">Antoan Bekele</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>realsense2_camera</run_depend>
  <run_depend>realsense2_description</run_depend>
  <run_depend>rtabmap_ros</run_depend>

  <export>
  </export>
</package>
